<resources>
    <string name="app_name">WeatherProject</string>
    <string name="title_weather">Weather</string>
    <string name="title_cities">Cities</string>
    <string name="title_settings">Settings</string>
    <string name="apiKey">3b4bf688673b4f32bff235820231907</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>

<!--    Weather Fragment-->

    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="precipitation">Precipitation</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="gust">Gust</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="gustimage">GustImage</string>
    <string name="humidityimage">HumidityImage</string>
    <string name="visibilityimage">VisibilityImage</string>
    <string name="locationimage">LocationImage</string>
    <string name="iconimage">IconImage</string>
    <string name="precipitationimage">PrecipitationImage</string>
    <string name="pressureimage">PressureImage</string>
    <string name="windimage">WindImage</string>
    <string name="searchimage">SearchImage</string>
    <string name="city">City</string>

</resources>