<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_weather">

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.weatherproject.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather">
        <action
            android:id="@+id/action_navigation_weather_to_navigation_cities"
            app:destination="@id/navigation_cities"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cities"
        android:name="com.example.weatherproject.ui.cities.CitiesFragment"
        android:label="@string/title_cities"
        tools:layout="@layout/fragment_cities">
        <action
            android:id="@+id/action_navigation_cities_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.weatherproject.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
    </fragment>
</navigation>