<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/day"
    android:orientation="vertical"
    tools:context=".ui.weather.WeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <ImageView
            android:id="@+id/locImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_my_location_24"
            android:contentDescription="@string/locationimage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:hint="@string/city">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loctionET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/searchImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_search_24"
            android:contentDescription="@string/searchimage"/>

    </LinearLayout>

    <TextView
        android:id="@+id/locText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/feelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/conditionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="#432196F3"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/windImage"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/baseline_air_24" />

                            <TextView
                                android:id="@+id/windText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="20dp"
                        app:cardBackgroundColor="#432196F3"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/pressureImage"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/baseline_speed_24" />

                            <TextView
                                android:id="@+id/pressureText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="#432196F3"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/precipitation"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/precipImage"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/baseline_water_drop_24" />

                            <TextView
                                android:id="@+id/precipText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="20dp"
                        app:cardBackgroundColor="#432196F3"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/visibility"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/visiImage"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/baseline_remove_red_eye_24" />

                            <TextView
                                android:id="@+id/visiText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="#432196F3"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/humiImage"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/humidity" />

                            <TextView
                                android:id="@+id/humiText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="20dp"
                        app:cardBackgroundColor="#432196F3"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/gust"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/gustImage"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                app:srcCompat="@drawable/wind" />

                            <TextView
                                android:id="@+id/gustText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/favBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/add_to_favorites" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>